--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>-->
 
-    <p>Hey，我是<strong>Howie</strong>，一只 Java 程序猿，现在广州。</p>
+    <p>Hey，我是<strong>Howie</strong>，一位 Java 开发者，现在广州。</p>
 
     <p>沉迷工作、学习，热爱音乐，喜欢唱歌。</p>
 
